# clash-cli

./: .gitignore  LICENSE  README.md  README_en.md  README_zh.md  install.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md
resources/: mixin.yaml
script/: clash-cli.fish  clash-cli.sh  common.sh
src/: README.md  pyproject.toml
src/clash_cli/: __init__.py  cli.py  constants.py  exceptions.py  i18n.py  init.py  main.py  utils.py
src/clash_cli/core/: __init__.py  config.py  installer.py  proxy.py  service.py
src/clash_cli/resources/: default_mixin.yaml  install.sh
src/clash_cli/resources/resources/fallback/: versions.json
src/clash_cli/resources/script/: clash-cli.sh  common.sh
